<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_teach"
            android:icon="@mipmap/teach"
            android:title="@string/menu_name_teach" />
        <item
            android:id="@+id/nav_seat"
            android:icon="@mipmap/seat"
            android:title="@string/menu_name_seat" />
        <item
            android:id="@+id/nav_allsign"
            android:icon="@mipmap/allsign"
            android:title="@string/menu_name_allsign" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@mipmap/tools"
            android:title="@string/menu_name_tools" />
    </group>

    <!-- 自动在两者之间加入分割线 -->
    <item android:title="其他">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@mipmap/about"
                android:title="@string/menu_name_about" />
        </menu>
    </item>

</menu>
