<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/tv_from"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:hint="@string/edt_from_hint"
            android:id="@+id/edt_telenum"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:text="@string/tv_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:id="@+id/edt_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btn_write"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_write"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_recover"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:text="@string/btn_recover"
        android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
